--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -136,3 +136,25 @@ a:hover {
   0% {margin-left: -200px; opacity: 0};
   100% {margin-left: 0px; opacity: 1};
 }
+
+#vid {
+  position: fixed;
+  min-width: 135%;
+  min-height: 110%;
+  opacity: 1;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover;
+  overflow: hidden;
+  -webkit-filter: blur(15px);
+  -moz-filter: blur(15px);
+  -o-filter: blur(15px);
+  -ms-filter: blur(15px);
+  filter: blur(15px);
+  background: rgba(7,9,21,.5);
+  filter: brightness(62.5%);
+  top: 50%;
+  left: 50%
+}
