--- a/css/docstyle.css
+++ b/css/docstyle.css
@@ -1,10 +1,61 @@
+/* cyrillic-ext */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');
+    unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+  }
+  /* cyrillic */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  }
+  /* vietnamese */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format('woff2');
+    unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  }
+  /* latin-ext */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }
+  /* latin */
+  @font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v13/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
+  .background{
+	filter: blur(5px);
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+	z-index: -1;
+}
+
 body {
     padding: 0;
     margin: 0;
     overflow: hidden;
     background-color: #000000;
     color: #0bf;
-    font-family: 'Comfortaa' ;
+    font-family: 'Montserrat';
     user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none
@@ -14,7 +65,7 @@ body {
     width: 10vh;
 }
 
-.container {
+.bruh {
     position: relative;
     left: 50%;
     top: 50%;
@@ -25,26 +76,11 @@ body {
     z-index: 2;
 }
 
-.containerbackground {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    background-color: black;
-    opacity: 0.6;
-    z-index: 1;
-    border-radius: 20px;
-
-}
-
 .medtext {
     display: inline-block;
     position: relative;
     padding-bottom: 1em;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Montserrat';
     color: #FFF;
     text-align: center;
     font-size: 20px;
@@ -54,7 +90,7 @@ body {
 .intro {
     display: inline-block;
     position: relative;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Montserrat';
     color: #ecf0f1;
     text-align: center;
     animation-delay: .2s;
@@ -66,34 +102,22 @@ body {
 .links {
     display: inline-block;
     position: relative;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Montserrat';
     color: #fff;
     text-align: center;
     animation-delay: .5s;
     font-size: 12pt;
 }
 
-.linkfigure {
-    padding-bottom: 1.5vh;
-}
-
-.playlist {
-    padding: 0;
-    margin: 0;
-    position: relative;
-    left: -3%;
-    top: 50%;
-    transform: translate(0%, 0%);
-    text-align: center;
-    display: inline-block;
-    animation: playlistbox 0s
+.bottompad {
+    padding-bottom: 1.2vh;
 }
 
 a {
     color: #fff;
 }
 
-.tab {
+.hmm {
     width: 4em;
     display: inline;
     margin-left: auto;
