Revert "added video switcher"
This reverts commit f762f8d88319b7373736ac6310f83add92ae0bae.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -75,8 +75,7 @@ a.title {
 	letter-spacing: 1px;
 	font-family: 'VOXI-Semibold';
 	font-size: 35px;
-  color: white;
-  text-align: center;
+	color: white;
 }
 
 a:hover {
@@ -98,8 +97,9 @@ a:hover {
 }
 
 #title {
+  padding-bottom: 33px;
+  padding-top: 34px
 }
-
 #vid {
   position:fixed;
   min-width:135%;
